#152: Added security to Selector-related UCs